--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -1,17 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: nginx
+  name: wordpress
   namespace: default
 spec:
   chart:
     spec:
-      chart: nginx
+      chart: wordpress
       sourceRef:
         kind: HelmRepository
         name: bitnami-repo
-      version: ">=11.0.0"
+      version: ">=6.0.0"
   interval: 60m0s
-values:
-  service:
-    type: ClusterIP
