--- a/litmus.yaml
+++ b/litmus.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: litmuschaos/litmus
+      chart: litmus
       sourceRef:
         kind: HelmRepository
         name: litmus-repo
